--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>Vite + Vue</title>
   </head>
-  <body class="bg-zinc-100">
+  <body class="bg-zinc-100 text-zinc-800">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
